--- a/public/static/annastyles2.css
+++ b/public/static/annastyles2.css
@@ -106,15 +106,6 @@
   font-size: 1.04em;
 }
 
-.stat {
-  float: left;
-  width: 50%;
-  padding: 10px;
-  margin: 0;
-  font-size: 1.2em;
-  border: 1px solid #E6DFF5;
-}
-
 .map-static {
   display: flex;
   justify-content: center;
@@ -337,4 +328,29 @@ a:active {
 
 #plz-work:hover {
   font-weigt: bold;
+}
+
+.overview-stats {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  font-size: 1.2em;
+  padding: 5px;
+  line-height: 1.3;
+}
+
+.stat {
+  line-height: 1.6;
+}
+
+.background {
+  background: #f2edb8;
+  position: relative;
+  margin: 0;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
 }
